# 21s2-cp-spa-team-23

./: README.md
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/spa/src/: Constants.h  Extractor.cpp  Extractor.h  Identifier.cpp  Identifier.h  PKB.cpp  PKB.h  Parser.cpp  Parser.h  Partition.cpp  Partition.h  RelationshipExtractor.cpp  RelationshipExtractor.h  SourceTokenizer.cpp  SourceTokenizer.h  StringFormatter.cpp  StringFormatter.h  TNode.cpp  TNode.h  Validator.cpp  Validator.h
Team00/Code00/src/spa/src/Constants/: Constants.h  regex.h
Team00/Code00/src/spa/src/QP_Evaluator/: QueryEvaluator.h
Team00/Code00/src/spa/src/QP_Evaluator/ClauseEvaluators/: ModifiesSClauseEvaluator.h  ParentTClauseEvaluator.cpp  PatternClauseEvaluator.cpp  PatternClauseEvaluator.h  SelectClauseEvaluator.cpp  SelectClauseEvaluator.h  SuchThatClauseEvaluator.cpp
Team00/Code00/src/spa/src/QP_Evaluator/Query/: Query.h
Team00/Code00/src/spa/src/QP_Parser/: Constants.h  Exception.h  PreProcessor.cpp  PreProcessor.h  QueryParser.cpp  QueryParser.h  Tokenizer.cpp  Tokenizer.h  Validator.cpp  Validator.h
Team00/Code00/src/spa/src/SourceProcessor/: Parser.cpp  Parser.h  RelationshipExtractor.cpp  RelationshipExtractor.h  SourceProcessor.cpp  SourceTokenizer.cpp  SourceTokenizer.h
Team00/Code00/src/spa/src/pql/: QueryEvaluator.cpp  QueryEvaluator.h  QueryPreprocessor.cpp  QueryPreprocessor.h
Team00/Code00/src/spa/src/pql/ClauseEvaluators/: ClauseEvaluator.cpp  ClauseEvaluator.h  FollowsClauseEvaluator.cpp  FollowsClauseEvaluator.h  FollowsTClauseEvaluator.cpp  FollowsTClauseEvaluator.h  ModifiesSClauseEvaluator.cpp  ParentClauseEvaluator.cpp  ParentClauseEvaluator.h  ParentTClauseEvaluator.h  PatternClauseEvaluator.cpp  PatternClauseEvaluator.h  Result.h  SelectClauseEvaluator.cpp  SuchThatClauseEvaluator.cpp  SuchThatClauseEvaluator.h  SynonymRelations.cpp  SynonymRelations.h  UsesSClauseEvaluator.cpp  UsesSClauseEvaluator.h
Team00/Code00/src/spa/src/pql/evaluator/: ClauseEvaluator.cpp  ClauseEvaluator.h  FollowsClauseEvaluator.cpp  FollowsClauseEvaluator.h  FollowsTClauseEvaluator.cpp  FollowsTClauseEvaluator.h  PatternClauseEvaluator.cpp  PatternClauseEvaluator.h  Result.h  SelectClauseEvaluator.cpp  SelectClauseEvaluator.h  SuchThatClauseEvaluator.cpp  SuchThatClauseEvaluator.h  Utility.h
Team00/Code00/src/spa/src/pql/query_obj/: Argument.h  Clause.cpp  Clause.h  ClauseEvaluator.h  PatternClause.cpp  PatternClause.h  PatternClauseEvaluator.h  Query.cpp  Query.h  Result.cpp  Result.h  SelectQuery.h  SuchThatClause.cpp  (+3 more)
Team00/Code00/src/unit_testing/: CMakeLists.txt
Team00/Code00/src/unit_testing/src/: TestAST.cpp  TestIdentifier.cpp  TestPKB.cpp  TestParser.cpp  TestQueryEvaluator.cpp  TestRelationshipExtractor.cpp  TestSourceTokenizer.cpp  TestStringFormatter.cpp  TestSynonymRelations.cpp  TestTNode.cpp
Team00/Code00/src/unit_testing/src/QP-evaluator/: TestPatternClauseEvaluator.cpp
Team00/Code00/src/unit_testing/src/QP_Evaluator/: TestPatternClauseEvaluator.cpp  TestQueryEvaluator.cpp  TestSynonymRelations.cpp
Team00/Code00/src/unit_testing/src/QP_Parser/: PreProcessor.cpp  TestPreProcessor.cpp  TestQueryParser.cpp  TestQueryTokenizer.cpp  TestValidator.cpp  Tokenizer.cpp
Team23/Code23/src/spa/: CMakeLists.txt
Team23/Code23/src/spa/src/: PKB.cpp  PKB.h  StringFormatter.cpp  StringFormatter.h  TNode.h
Team23/Code23/src/spa/src/Cache/: Cache.cpp  Cache.h
Team23/Code23/src/spa/src/Constants/: Constants.h  regex.h
Team23/Code23/src/spa/src/PKB/: FKB.cpp  FKB.h  PKB.cpp  PKB.h  PKBHelper.cpp  PKBHelper.h
Team23/Code23/src/spa/src/QP_Evaluator/: QueryEvaluator.cpp  QueryEvaluator.h  QueryOptimizer.cpp  QueryOptimizer.h
Team23/Code23/src/spa/src/QP_Parser/: Constants.h  Exception.h  QueryParser.cpp  QueryParser.h  Tokenizer.cpp  Tokenizer.h  Validator.cpp  Validator.h
Team23/Code23/src/spa/src/QP_database/: AffectsOperator.cpp  AffectsOperator.h  AffectsTOperator.cpp  AffectsTOperator.h  CFGOperator.cpp  CFGOperator.h  CacheOperator.cpp  CacheOperator.h  GraphMethods.cpp  GraphMethods.h  NextTOperator.cpp  NextTOperator.h  QPDatabase.cpp  QPDatabase.h
Team23/Code23/src/spa/src/SourceProcessor/: DesignExtractor.cpp  DesignExtractor.h  EntityExtractor.cpp  EntityExtractor.h  GraphNode.cpp  GraphNode.h  Identifier.cpp  Identifier.h  Parser.cpp  Parser.h  RelationshipExtractor.cpp  RelationshipExtractor.h  SemanticsVerifier.cpp  SemanticsVerifier.h  SourceProcessor.cpp  SourceProcessor.h  SourceTokenizer.cpp  SourceTokenizer.h
Team23/Code23/src/spa/src/TNode/: AssignNode.cpp  AssignNode.h  BinaryOperatorNode.cpp  BinaryOperatorNode.h  CallNode.cpp  CallNode.h  CondExprNode.cpp  CondExprNode.h  ConstValueNode.cpp  ConstValueNode.h  IfNode.cpp  IfNode.h  Node.cpp  Node.h  PrintNode.cpp  PrintNode.h  ProcNameNode.cpp  ProcNameNode.h  ProcedureNode.cpp  ProcedureNode.h  ProgramNode.cpp  ProgramNode.h  ReadNode.cpp  ReadNode.h  RelExprNode.cpp  RelExprNode.h  StmtLstNode.cpp  StmtLstNode.h  StmtNode.cpp  StmtNode.h  TNode.h  VariableNode.cpp  VariableNode.h  WhileNode.cpp  WhileNode.h
Team23/Code23/src/unit_testing/: CMakeLists.txt
Team23/Code23/src/unit_testing/src/: TestAST.cpp  TestCFG.cpp  TestCFGConstructor.cpp  TestCFGOperator.cpp  TestCache.cpp  TestCacheOperator.cpp  TestFKB.cpp  TestIdentifier.cpp  TestPKB.cpp  TestPKBOld.cpp  TestParser.cpp  TestRelationshipExtractor.cpp  TestSourceTokenizer.cpp  TestStringFormatter.cpp  TestTNode.cpp
Team23/Code23/src/unit_testing/src/QP_Evaluator/: TestPatternClauseEvaluator.cpp  TestQueryEvaluator.cpp  TestResultClauseEvaluator.cpp  TestResultClauseEvaluators.cpp  TestResultTable.cpp  TestSuchThatClauseEvaluator.cpp  TestSynonymRelations.cpp  TestUtilities.cpp  TestUtilities.h  TestWithClauseEvaluator.cpp
Team23/Code23/src/unit_testing/src/QP_Parser/: TestQueryParser.cpp  TestQueryTokenizer.cpp  TestQueryTokenizerClause.cpp  TestQueryTokenizerDeclarations.cpp  TestValidator.cpp  TestValidatorSemantic.cpp  TestValidatorSemanticSuchThat.cpp  TestValidatorSyntactic.cpp  TestValidatorTokenizerSyntactic.cpp
(+189 files in other folders)
